<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/username1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="User Name"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username1"
        android:layout_marginTop="50dp"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnsignin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Prijava"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password1"/>

    <Button
        android:id="@+id/btnreg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pojdi nazaj na  registracijo"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/btnsignin1"/>

</RelativeLayout>